...
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <include
            android:id="@+id/include2"
            layout="@layout/navbar" />

        <Button
            android:id="@+id/ShuttleRunBtn"
            style="@style/standard_button"
            android:background="@drawable/standard_button_green"
...
            app:layout_constraintTop_toBottomOf="@+id/ShuttleRunBtn"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/StandardBtn"
            style="@style/standard_button"
            android:background="@drawable/standard_button_pink"
            android:onClick="standardWorkout"
            android:text="Standard"
            android:layout_above="@+id/ShuttleRunBtn"
            android:layout_marginBottom="5dp"
            android:layout_alignParentStart="true" />


    </RelativeLayout>
...
