...
            android:layout_marginBottom="5dp"
            android:background="@drawable/standard_button_green"
            android:text="Progress"
            app:layout_constraintTop_toBottomOf="@+id/ExerciseListBtn" />

        <Button
            android:id="@+id/btnWorkoutH"
            style="@style/standard_button"
            android:layout_above="@+id/ExerciseListBtn"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/ExerciseListBtn"
            android:layout_marginBottom="5dp"
            android:background="@drawable/standard_button_pink"
            android:text="My workout" />

        <Button
            android:id="@+id/Settings"
            style="@style/standard_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
...
