...
            android:text="Forgotten Password?"
            android:textColor="@color/greenAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:layout_above="@+id/loginBtnM"
            android:layout_centerHorizontal="true" />


        <Button
            android:id="@+id/loginBtnM"
            android:layout_width="match_parent"
            android:layout_above="@+id/registerBtnM"
            style="@style/standard_button"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="8dp"
            android:background="@color/colorAccent"
            android:onClick="onLogin"
            android:text="Log in"
            android:textColor="@android:color/white"
            android:textColorHint="@color/greenAccent"
            android:textSize="45sp" />


        <Button
...
